# tilewise

./: .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.toml  scratch_catan.py  scratch_e5_analyze.py  scratch_e5_status.sh
catan_engine/: Cargo.toml
catan_engine/benches/: full_game_length.rs  throughput.rs
catan_engine/src/: actions.rs  board.rs  engine.rs  events.rs  lib.rs  observation.rs  rng.rs  rules.rs  state.rs  stats.rs
catan_engine/tests/: abc_map.rs  action_encoding.rs  chance_api.rs  determinism.rs  determinism_chance.rs  determinism_hashes.rs  dev_cards.rs  discard.rs  geometry.rs  instant_discard.rs  inventory_and_longest_road.rs  legal_mask.rs  lookahead.rs  main_phase.rs  maritime_trade.rs  observation.rs  player_trades.rs  ports.rs  ports_layout.rs  properties.rs  robber.rs  rollout.rs  setup_phase.rs  smoke.rs  terminal_on_lr_la.rs  trade_loop_cap.rs  v3_rules.rs
mcts_study/: .gitignore  README.md  bench_python_loop.py  pyproject.toml  render_board.py  render_board_layout.py  run_5h_production.sh  run_v2_production.sh
mcts_study/catan_gnn/: __init__.py  adjacency.py  benchmark.py  dataset.py  gnn_model.py  rotation.py  state_to_pyg.py  train.py
mcts_study/catan_mcts/: __init__.py  adapter.py  bots.py  bots_gnn.py  cli.py  evaluator.py  gnn_evaluator.py  playback.py  players_v3.py  recorder.py
mcts_study/docs/: learnings.md  writeup.md
mcts_study/notebooks/: analysis.ipynb
mcts_study/scripts/: grid_dashboard.html  grid_orchestrator.py  safety_check.py
mcts_study/tests/: test_adapter.py  test_adapter_properties.py  test_adjacency.py  test_benchmark.py  test_bots.py  test_cli.py  test_dataset.py  test_determinism.py  test_e1_runs.py  test_e2_runs.py  test_e3_runs.py  test_e4_runs.py  test_e5_runs.py  test_e6_runs.py  test_e9_runs.py  test_engine_combined_calls.py  test_engine_regression.py  test_evaluator.py  test_experiments_common.py  test_gnn_evaluator.py  test_gnn_model.py  (+11 more)
(+56 files in other folders)
