[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "catan_bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=7", "maturin>=1.5"]

[tool.maturin]
module-name = "catan_bot._engine"
python-source = "python"
features = ["pyo3/extension-module"]
