[package]
name = "catan_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "catan_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "full_game_length"
harness = false
