[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catan_mcts"
version = "0.1.0"
description = "OpenSpiel MCTS study using the catan_bot engine."
requires-python = ">=3.10"
# Note: `catan_bot` (the engine) is NOT listed here — it isn't on PyPI and is
# installed locally with `maturin develop --manifest-path ../catan_engine/Cargo.toml`
# from the active venv. See README for setup.
dependencies = [
    "open_spiel>=1.5",
    "pyarrow>=15",
    "pandas>=2.1",
    "numpy>=1.26",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "hypothesis>=6.100",
    "nbstripout>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["catan_mcts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests that take more than ~5 minutes; opt in with `pytest -m slow`",
]
